# black_hole_ray_marching

./: .gitignore  Cargo.toml  README.md  flame-graph.html  index.html  index.js  notes.md  package-lock.json  rustfmt.toml
src/: black_hole_maybe.wgsl  bloom copy.rs  bloom.rs  bloom.wgsl  blur.rs  blur.wgsl  camera.rs  copy.rs  copy.wgsl  downsample.wgsl  downsampling.rs  final_remix.wgsl  gaussian_blur.rs  gaussian_blur.wgsl  indices.rs  kawase_blur.rs  kawase_downsample.wgsl  kawase_downsampling.rs  kawase_upsample.wgsl  kawase_upsampling.rs  lib.rs  main.rs  oldlib.rs  otheruniforms.rs  podbool.rs  postprocessing.wgsl  remix.rs  remix.wgsl  samplescene.rs  scene.rs  screen_triangle.wgsl  screen_triangle_vertex_output.wgsl  settings.rs  smart_include.rs  state.rs  texture.rs  uniforms.rs  uniformscontroller.rs  upsample.wgsl  upsampling.rs  (+2 more)
src/old/: bloom.rs  blur.wgsl  box_blur.wgsl  gaussian_blur.rs  kawase_mixing_upsample.wgsl  kawase_mixing_upsampling.rs  mandelbrot_shader.wgsl  raymarching_shader_old.wgsl  upsample.wgsl
