[package]
name = "black_hole_ray_marching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#idk, take this out for building to wasm because thread-id doesn't have a get_internal for the wasm architecture
# flame = "0.2.2"

winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
aligned = "0.4.1"
encase = { version = "0.6.1", features = ["glam"] }
glam = "0.24.2"
cfg-if = "1.0.0"
wasm-bindgen = "0.2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

# [profile.dev]
# debug = false
# opt-level = 2
